# Robo_Eproc

./: .env.example  .gitignore  ANALISE_PROJETO.md  README.md  Relatorio_Auditoria.md  debug_2fa.py  mkdocs.yml  pyproject.toml  requirements.txt  scan_2fa_drift.py  state.json  test_2fa_variants.py  test_integration_api.py
.github/workflows/: ci.yml
data/: processos_peticao.csv  processos_peticao_inicial.csv  temp_download.xlsx
data/temp_MANDADOS_-_CITAÇÃO/: INTIMAÇÃO_ELETRÔNICA.xlsx
docs/: README.md  architecture.md  development.md  index.md  setup.md  usage.md
scratch/: diagnostico.py
src/: __init__.py  config.py  logger.py  main.py
src/scripts/: __init__.py  alvaras_eletronicos.py  base.py  exemplo_extracao.py  loc_base.py  loc_mandados.py  loc_peticao_inicial.py  loc_peticoes.py  loc_urgente.py  relatorio_conclusos.py  test_2fa.py
src/utils/: csv_handler.py  google_drive.py  google_sheets.py  integracao_legalmind.py  legalmind_startup.py
tests/: test_base_scraper.py  test_main.py  test_relatorio_conclusos.py
tmp/: reproduce_issue.py  verify_fix.py
